syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.proto";
option java_outer_classname = "CommonServiceProto";

message HelloRequest {
	int64 id = 1;
	string name = 2;
}

message HelloResponse {
  string message = 1;
}

service CommonService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}
